- Improved translations - Changes to navigation layout - Minor changes to some views (DoctorDetailsViewImpl, ScarViewImpl)

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1,5 +1,6 @@
 add = Hinzuf\u00FCgen
 addAnswer = Antwort hinzuf\u00FCgen
+enterBodyPart = K\u00F6rperstelle eingeben...
 addClinic = Klinik hinzuf\u00FCgen
 addDoctor = Examinator hinzuf\u00FCgen
 addLangSkill = Sprachkenntnis hinzuf\u00FCgen
@@ -25,6 +26,7 @@ bic = BIC
 bindType = Verkn\u00FCpfung
 birthday = Geburtsdatum
 bmi = BMI
+bodyPart = K\u00F6rperstelle
 cancel = Abbrechen
 checkListItem = Checklist Item*
 city = Ort
@@ -43,7 +45,6 @@ delete = L\u00F6schen
 description = Kommentar
 details = Einzelheiten
 edit = Bearbeiten
-editAnamnesisValue = Detail zur Person bearbeiten
 editClinic = Spital bearbeiten
 editDoctor = Examinator bearbeiten
 editPatient = SP bearbeiten
@@ -128,7 +129,7 @@ value = Wert
 weight = Gewicht
 workPermission = Arbeitsbewilligung
 yes = Ja
-participants = Participants
+participants = Examinatoren nach OSCE
 
 ######################### - GENERAL - #########################
 
@@ -154,8 +155,8 @@ contactInfo = Kontaktinformationen
 success = Aktion erfolgreich
 tableSize = Tabellengr\u00F6sse
 
-manageFacilities = Ressourcen verwalten
-manageMasterData = Versch. Stammdaten
+manageFacilities = Ressourcen
+manageMasterData = Verschiedenes
 manageSpMasterData = SP Stammdaten
 manageSystem = OSCEManager
 
@@ -174,6 +175,7 @@ importeosce=Pr\u00FCfungsergebnisse importieren (eOSCE)
 exportosce=Daten nach eOSCE exportieren
 role = Rolle
 roles = Rollen
+roleDefinitions = Rollendefinitionen
 topicsAndSpec = Dsiziplinen & Fertigkeiten
 roleScriptTemplate = Dokumentenbausteine
 importStudentData = Studentendaten importieren
@@ -639,7 +641,8 @@ tplDescLunchBreak = Mittagspause
 
 #DoctorView / BellSchedule
 version=Version
-oscedoc=OSCE
+osceParticipation=OSCE Teilnahme
+roleParticipation=Bearbeitete Rollen
 starttimedoc=Startzeit
 endtimedoc=Schlusszeit
 
