--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -64,12 +64,12 @@ MALE = m\u00E4nnlich
 FEMALE = weiblich
 
 #LangSkillLevel
-A1 = A1
-A2 = A2
-B1 = B1
-B2 = B2
-C1 = C1
-C2 = C2
+A1 = A1 (Beginner)
+A2 = A2 (Elementary)
+B1 = B1 (Intermediate)
+B2 = B2 (Upper intermediate)
+C1 = C1 (Effective operational proficiency)
+C2 = C2 (Proficiency)
 NATIVE_SPEAKER = Muttersprache
 
 #PossibleFields
