--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -1,8 +1,8 @@
 #AnamnesisCheckTypes
 QUESTION_OPEN = Open question
 QUESTION_YES_NO = Yes/No - question 
-QUESTION_MULT_S = Multiple-Choice /w single selection
-QUESTION_MULT_M = Multiple-Choice /w multiple selection
+QUESTION_MULT_S = Multiple-Choice with single selection
+QUESTION_MULT_M = Multiple-Choice with multiple selection
 QUESTION_TITLE = Title
 
 #AssignmentTypes
@@ -64,12 +64,12 @@ MALE = male
 FEMALE = female
 
 #LangSkillLevel
-A1 = A1
-A2 = A2
-B1 = B1
-B2 = B2
-C1 = C1
-C2 = C2
+A1 = A1 (Beginner)
+A2 = A2 (Elementary)
+B1 = B1 (Intermediate)
+B2 = B2 (Upper intermediate)
+C1 = C1 (Effective operational proficiency)
+C2 = C2 (Proficiency)
 NATIVE_SPEAKER = Native speaker
 
 #PossibleFields
