--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1,5 +1,6 @@
 add = add
 addAnswer = addAnswer
+enterBodyPart = enterBodyPart
 addClinic = addClinic
 addDoctor = addDoctor
 addLangSkill = addLangSkill
@@ -25,6 +26,7 @@ bic = bic
 bindType = bindType
 birthday = birthday
 bmi = bmi
+bodyPart = bodyPart
 cancel = cancel
 checkListItem = checkListItem
 city = city
@@ -43,7 +45,6 @@ delete = delete
 description = description
 details = details
 edit = edit
-editAnamnesisValue = editAnamnesisValue
 editClinic = editClinic
 editDoctor = editDoctor
 editPatient = editPatient
@@ -56,6 +57,7 @@ field = field
 filterTitle = filterTitle
 from = from
 gender = gender
+genderFilter = genderFilter
 generalInformation = generalInformation
 googleMaps = googleMaps
 handledConfidentially = handledConfidentially
@@ -173,6 +175,7 @@ importeosce = importeosce
 exportosce = exportosce
 role = role
 roles = roles
+roleDefinitions = roleDefinitions
 topicsAndSpec = topicsAndSpec
 roleScriptTemplate = roleScriptTemplate
 importStudentData = importStudentData
@@ -638,7 +641,8 @@ tplDescLunchBreak = tplDescLunchBreak
 
 #DoctorView / BellSchedule
 version = version
-oscedoc = oscedoc
+osceParticipation = osceParticipation
+roleParticipation = roleParticipation
 starttimedoc = starttimedoc
 endtimedoc = endtimedoc
 
