--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1,5 +1,6 @@
 add = Add
 addAnswer = Add answer
+enterBodyPart = Enter body part...
 addClinic = Add clinic
 addDoctor = Add examiner
 addLangSkill = Add language skill
@@ -25,6 +26,7 @@ bic = BIC
 bindType = Linkage
 birthday = Birth date
 bmi = BMI
+bodyPart = Body part
 cancel = Cancel
 checkListItem = Checklist Item*
 city = City
@@ -41,9 +43,8 @@ dateTime = Date/time
 dateTimeFormat = dd. MMMM yyyy
 delete = Delete
 description = Comment
-details = Particulars*
+details = Particulars
 edit = Edit
-editAnamnesisValue = Edit anamnesis value*
 editClinic = Edit clinic
 editDoctor = Edit examiner
 editPatient = Edit SP
@@ -80,15 +81,15 @@ nationality = Nationality
 no = No
 noMatter = Don't care
 noTitle = Question does not belong to a title.
-officeDetails = Office
+officeDetails = Secretary
 order = Order
 ownerName = Owner
 patient = SP
 patientHas = SP has
 patientSpeaks = SP speaks
 persons = Persons
-plz = PLZ
-plzCity = PLZ, City
+plz = Postal code
+plzCity = Postal code, City
 possibleAnswers = Possible answers
 preName = First name
 previousQuestion = previous question
@@ -128,7 +129,7 @@ value = Value
 weight = Weight
 workPermission = Work permission
 yes = Yes
-participants = Participants
+participants = Examiners by OSCE
 
 ######################### - GENERAL - #########################
 
@@ -154,8 +155,8 @@ contactInfo = Contact details
 success = Operation successful
 tableSize = Table size
 
-manageFacilities = Manage Resources
-manageMasterData = Misc. basic data
+manageFacilities = Resources
+manageMasterData = Miscellaneous
 manageSpMasterData = SP basic data
 manageSystem = OSCEManager
 
@@ -174,6 +175,7 @@ importeosce=Import test results (eOSCE)
 exportosce=Export data to eOSCE
 role = Role
 roles = Roles
+roleDefinitions = Role definitions
 topicsAndSpec = Disciplines & Skills
 roleScriptTemplate = Document components
 importStudentData = Import student data
@@ -334,8 +336,8 @@ confirmationDeleteRole = Do you really want to delete this role?
 roleTopic = Skill
 addDiscipline = Add discipline
 addRoleTopic = Add skill
-studyYear = SY
-studyYears = Study year
+studyYear = AY
+studyYears = Academic year
 
 #TopicsAndSpecActivity
 warningAssignedRoleTopic = Discipline can not be deleted if it has an assigned skill.
@@ -365,9 +367,9 @@ roomMaterialPriceType = Settlement type
 
 #Add/Edit Semester Popup
 year = Year
-maxYearlySalary = Maximum yearly salary
-salarySimpat = Salary SP
-salaryExtra = Salary extras
+maxYearlySalary = Maximum yearly wage
+salarySimpat = Hourly wage for SP
+salaryExtra = Hourly wage for extras
 
 #Manage Osces
 general = General
@@ -378,7 +380,7 @@ osce = OSCE
 remark = Remarks
 osceMaxCircuits = Max. circuits
 osceMaxStudents = Max. students
-osceStationLength = Station length
+osceStationLength = Station duration
 osceBreak=Breaks (short/medium/long)
 min = min
 addOsce = Add OSCE
@@ -407,19 +409,19 @@ osceWarningFuture = Date too far in the future. Has to be within 2 years of now.
 #Circuit details view
 close = Close
 osceSimpatsInShortBreak = Short break with SP-changeover
-generate = Generate*
-clearAll = Clear All*
-fixedButtonString = Freeze*
-reopenButtonString= Reopen*
+generate = Generate
+clearAll = Clear All
+fixedButtonString = Freeze
+reopenButtonString= Reopen
 circuitDay = OSCE Day
 circuitTimes = Timeframe
 circuitDate = Date
 circuitStart = Start time
 circuitEnd = Latest end time
-circuitCalculations = Calculated times*
-circuitLunchBreak=Lunch break*
-circuitEndTime = End time*
-circuitLunchBreakStart=Lunch break start*
+circuitCalculations = Calculated times
+circuitLunchBreak=Lunch break
+circuitEndTime = End time
+circuitLunchBreakStart=Lunch break start
 circuitStation = Station
 select = Select
 circuitUnnamedSequence = Unnamed Sequence
@@ -639,7 +641,8 @@ tplDescLunchBreak = Lunch break
 
 #DoctorView / BellSchedule
 version=Version
-oscedoc=OSCE
+osceParticipation=OSCE Participation
+roleParticipation=Edited roles
 starttimedoc=Start Time
 endtimedoc=End Time
 
