- Fixed some translation errors - Fixed some texts - Fixed some Buttons / Icons

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -28,7 +28,7 @@ birthday = Geburtsdatum
 bmi = BMI
 bodyPart = K\u00F6rperstelle
 cancel = Abbrechen
-checkListItem = Checklist Item*
+checkListItem = Checklisten-Eintrag
 city = Ort
 clinic = Klinik
 clinicalSpecialisation = Disziplin
@@ -325,12 +325,11 @@ printFor = Drucken f\u00FCr
 basicData = Stammdaten
 standardizedRole = Simulationsrolle
 optionDetail = Optionsdetails
-roleBaseItemName = Role Base Item Name*
 
 #RoleDetailsActivity
 confirmationMajorSkillAdded = Prim\E4rer Skill hinzugef\u00FCgt!
 confirmationMinorSkillAdded = Sekund\u00E4rer Skill hinzugef\u00FCgt!
-confirmationDeleteRole = rolle wirklich l\u00F6schen?
+confirmationDeleteRole = Rolle wirklich l\u00F6schen?
 
 ####Topics & Specification
 roleTopic = Fertigkeit
@@ -373,22 +372,22 @@ salaryExtra = Stundenlohn Statist
 
 #Manage Osces
 general = Allgemein
-attributes = Eigenschaften
+attributes = Eckdaten
 breaks = Pausen
 
 osce = OSCE
 remark = Bemerkungen
 osceMaxCircuits = Max. Parcours
 osceMaxStudents = Max. Studenten
-osceStationLength = Postenl\u00E4nge
+osceStationLength = Postendauer
 osceBreak=Pausen (kurz/mittel/lang)
 min = min
-addOsce = OSCE hinzuf\u00FCgen
+addOsce = Neuen OSCE erstellen
 
 #OsceEditView
 editOsce = OSCE bearbeiten
 osceMaxRooms = Maximale Anzahl R\u00E4ume
-osceIsRepe = Ist Repetition
+osceIsRepe = Ist dies eine Repetition eines fr\u00FCheren OSCE?
 osceRepe = Repetition von OSCE
 osceShortBreak = Dauer kurze Pause
 osceLongBreak = Dauer lange Pause
@@ -475,8 +474,8 @@ deleteTask=Wollen Sie diese Aufgabe wirklich l\u00F6schen?
 saveOsceBlueprint=OSCE-Postenvorlage erfolgreich gespeichert.
 osceDaySuccess=OSCE Tag erfolgreich aktualisiert.
 osceSequence=OSCE Sequenz:
-schedulePostpone = 1 Tag verschieben
-scheduleEarlier = 1 Tag vorverschieben
+schedulePostpone = Eine Sequenz verschieben
+scheduleEarlier = Eine Sequenz vorverschieben
 warningRoomUnassigned = Bitte jedem Posten einen Raum zuweisen!
 
 #Sequence Sub View
@@ -492,8 +491,8 @@ exaPlanNumRooms = Anzahl R\u00E4ume:
 exaPlanLunchBreak = Mittagspause:
 exaPlanLongBreak= Lange Pause:
 exaPlanChangeBreak = SP-Wechsel-Pause:
-exaPlanAssignStudents = Studenten zuweisen
-exaPlanAssignSp = SPs zuweisen
+exaPlanAssignStudents = Studenten den Timeslots zuweisen
+exaPlanAssignSp = SPs den Timeslots zuweisen
 
 #ExaminationScheduleActivity
 exaPlanBreakPost = SP Pause
@@ -501,7 +500,7 @@ examiner = Examinator
 exaPlanSpSuccess = Simulationspatienten erfolgreich zugewiesen.
 exaPlanSpFailure = Simulationspatienten konnten nicht zugewiesen werden.
 exaPlanStudentSuccess = Studenten erfolgreich zugewiesen.
-exaPlanStudentFailure = Studenten konnten nicht zugewiesen werden.
+exaPlanStudentFailure = Studenten konnten nicht zugewiesen werden. M\u00F6glicherweise wurden zuviele Studenten importiert.
 exaPlanStudShort = S
 exaPlanExaShort = E
 exaPlanSpShort = SP
@@ -696,12 +695,11 @@ lrnObjAppliance = Problemtyp
 warningStandardizedRoleUnassigned = Bitte jedem Posten eine Rolle zuweisen!
 accessNotification = Zugriff wurde bereits zugewiesen!
 information = Information
-roleTemplateDeleteWarning=RoleTemplate Can not be deleted as assign in Standardizd role*
+roleTemplateDeleteWarning= Vorlage kann nicht gel\u00F6scht werden, da sie in einer Rolle verwendet wird.
 roleTemplateDeleteMessage=Rollenvorlage wurde erfolgreich gel\u00F6scht!
 
 csvFileError = Datei nicht verarbeitet. student_id, name und prename sind Pflichtfelder!
 statisticsEvaluation = Statistische Auswertung
-statisticsEvaluationPlace = Statistischer Auswertungsplatz*
 createOsce=OSCE erstellen
 osceAssignments=Zuweisungen
 assignmentsOutput=OSCEManager Output
@@ -763,7 +761,7 @@ roomAlreadyAssignWantToExcahnge = Dieser Raum ist bereits einem anderen Posten z
 roleUsage=Verwendung der Rolle
 
 #spec issue change
-exchange = Tauschen**
+exchange = Tauschen
 exchangeSpError = Kein SP ausgew\u00E4hlt!
 exchangeStudError = Kein Student ausgew\u00E4hlt
 StudentDetailsPlace = Studenteninformationen
@@ -790,7 +788,7 @@ paymentName=Kaspar Traub
 studentName=Name Student
 studentLogicalBreak=Pause Student
 
-previousAssignmentWillLost=Vorherige zuweisung geht verloren wenn eine **
+previousAssignmentWillLost=Diese Aktion \u00FCberschreibt eine bereits bestehende Zuordnung unwiderruflich!
 alphabeticOrder=Alphabetisch
 scrumbleOrder=Reihenfolge verw\u00FCfeln
 item = Gegenstand
