--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -40,10 +40,10 @@ NOT_EQUALS = ungleich
 LESS = weniger als
 MORE = mehr als
 #By Spec[
-NATIONALITY = Nationality
+NATIONALITY = Nationalit/u00E4t
 #issue
-PROFESSION_EQUALS = SimPat hat
-PROFESSION_NOT_EQUALS = SimPat hat kein/e
+PROFESSION_EQUALS = SimPat arbeitet als
+PROFESSION_NOT_EQUALS = SimPat arbeitet nicht als
 WORKPERMISSION_EQUALS = SimPat hat
 WORKPERMISSION_NOT_EQUALS = SimPat hat kein/e
 MARITIALSTATUS_EQUALS = SimPat ist
