--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -42,8 +42,8 @@ MORE = more than
 #By Spec[
 NATIONALITY = Nationality
 #issue
-PROFESSION_EQUALS = SimPat hat
-PROFESSION_NOT_EQUALS = SimPat hat kein/e
+PROFESSION_EQUALS = SimPat works as
+PROFESSION_NOT_EQUALS = SimPat does not work as
 WORKPERMISSION_EQUALS = SimPat hat
 WORKPERMISSION_NOT_EQUALS = SimPat hat kein/e
 MARITIALSTATUS_EQUALS = SimPat is
