--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -28,7 +28,7 @@ birthday = Birth date
 bmi = BMI
 bodyPart = Body part
 cancel = Cancel
-checkListItem = Checklist Item*
+checkListItem = Checklist Item
 city = City
 clinic = Clinic
 clinicalSpecialisation = Discipline
@@ -325,7 +325,6 @@ printFor = Print for
 basicData = Master data
 standardizedRole = Standardized role
 optionDetail = Option details
-roleBaseItemName = Role Base Item Name*
 
 #RoleDetailsActivity
 confirmationMajorSkillAdded = Primary skill successfully added!
@@ -373,7 +372,7 @@ salaryExtra = Hourly wage for extras
 
 #Manage Osces
 general = General
-attributes = Attributes
+attributes = Key parameters
 breaks = Breaks
 
 osce = OSCE
@@ -383,12 +382,12 @@ osceMaxStudents = Max. students
 osceStationLength = Station duration
 osceBreak=Breaks (short/medium/long)
 min = min
-addOsce = Add OSCE
+addOsce = Create new OSCE
 
 #Manage Osces/Edit view
 editOsce = Edit OSCE
 osceMaxRooms = Max. number of rooms
-osceIsRepe = Is repetition
+osceIsRepe = Is this a repetition of an earlier OSCE?
 osceRepe = Repetition of OSCE
 osceShortBreak = Short break duration
 osceLongBreak = Long break duration
@@ -474,9 +473,9 @@ updateOsce=OSCE Data Updated sucessfully
 deleteTask=Do you really want to delete this task?
 saveOsceBlueprint=Osce Post blueprint saved successfully.
 osceDaySuccess=Osce Day Updated successfully
-osceSequence=OSCE Sequence*:
-schedulePostpone = Postpone 1 day
-scheduleEarlier = Prepone 1 day
+osceSequence=OSCE Sequence:
+schedulePostpone = Postpone one sequence
+scheduleEarlier = Prepone one sequence
 warningRoomUnassigned = Please assign room to each station
 
 #Sequence Sub View
@@ -492,8 +491,8 @@ exaPlanNumRooms = No. of rooms:
 exaPlanLunchBreak = Lunch break:
 exaPlanLongBreak= Long break:
 exaPlanChangeBreak= SP changeover break:
-exaPlanAssignStudents = Assign students
-exaPlanAssignSp = Assigns SPs
+exaPlanAssignStudents = Assign students to timeslots
+exaPlanAssignSp = Assign SPs to timeslots
 
 #ExaminationScheduleActivity
 exaPlanBreakPost = SP break
@@ -501,7 +500,7 @@ examiner = Examiner
 exaPlanSpSuccess = Standardized patients successfully assigned.
 exaPlanSpFailure = Standardized patients could not be assigned.
 exaPlanStudentSuccess = Students successfully assigned.
-exaPlanStudentFailure = Students could not be assigned.
+exaPlanStudentFailure = Students could not be assigned. Possibly too many students have been imported!
 exaPlanStudShort = S
 exaPlanExaShort = E
 exaPlanSpShort = SP
@@ -696,12 +695,11 @@ lrnObjAppliance = Problem type
 warningStandardizedRoleUnassigned = Please assign a role to each station!
 accessNotification = Access is already assigned!
 information = Information
-roleTemplateDeleteWarning = Role template can not be deleted as assign in standardizd role*
-roleTemplateDeleteMessage = Role template successfully deleted!
+roleTemplateDeleteWarning = Template can not be deleted because it is used in a role definition.
+roleTemplateDeleteMessage = Template successfully deleted!
 
 csvFileError = File not processed. student_id, name and prename are required fields!
 statisticsEvaluation = Statistical Evaluation
-statisticsEvaluationPlace = Statistical Evaluation place*
 createOsce=Create an OSCE
 osceAssignments=Assignments
 assignmentsOutput=OSCEManager Output
@@ -763,7 +761,7 @@ roomAlreadyAssignWantToExcahnge = Room is already assigned to a different statio
 roleUsage=Past use of role
 
 #spec issue change
-exchange = Exchange**
+exchange = Exchange
 exchangeSpError = No SP has been selected!
 exchangeStudError = No student has been selected!
 StudentDetailsPlace = Student details
@@ -777,8 +775,8 @@ noDataFound = No data found!
 
 clear=clear
 addPoint=Add Point
-minmum=min :*
-max=max :*
+minmum=min.:
+max=max.:
 minMaxNotNull=Minimum and maximum must not be 0!
 
 #export checklist
@@ -790,7 +788,7 @@ paymentName=Kaspar Traub
 studentName=Student name
 studentLogicalBreak=Student break
 
-previousAssignmentWillLost=Previous assignment will be lost if any **
+previousAssignmentWillLost=This action will irrevocably overwrite any previously defined assignments!
 alphabeticOrder = Alphabatically
 scrumbleOrder=Scramble order
 item = item
