Long Break Shifting Changes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -812,3 +812,8 @@ bucketName = bucketName
 accessKey = accessKey
 secretKey = secretKey
 bucketInfoError = bucketInfoError
+
+#change
+shiftBreak = shiftBreak
+prevRotation = prevRotation
+nextRotation = nextRotation
