Change in Questionnaire & Send to DMZ Changes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -815,3 +815,5 @@ bucketInfoError = No bucket information found
 shiftBreak = Shift Lunch Break : 
 prevRotation = Previous Rotation
 nextRotation = Next Rotation
+
+sendToDmz = Send To DMZ
