--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -817,3 +817,5 @@ bucketInfoError = bucketInfoError
 shiftBreak = shiftBreak
 prevRotation = prevRotation
 nextRotation = nextRotation
+
+sendToDmz = Send To DMZ
