Added translations for colors. Removed an unnecessary for-loop in ColorPicker.java Added some issues to README.md Improved Circuit definition view text

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -474,8 +474,8 @@ deleteTask=Wollen Sie diese Aufgabe wirklich l\u00F6schen?
 saveOsceBlueprint=OSCE-Postenvorlage erfolgreich gespeichert.
 osceDaySuccess=OSCE Tag erfolgreich aktualisiert.
 osceSequence=OSCE Sequenz:
-schedulePostpone = Eine Sequenz verschieben
-scheduleEarlier = Eine Sequenz vorverschieben
+scheduleEarlier = Erste Rotation um 1 Tag vorverschieben
+schedulePostpone = Letzte Rotation um 1 Tag verschieben
 warningRoomUnassigned = Bitte jedem Posten einen Raum zuweisen!
 
 #Sequence Sub View
@@ -709,7 +709,7 @@ osceLunchBreakRequiredFiled = Mittagspause sp\u00E4testens nach
 osceLongBreakRequiredFiled = Lange Pause sp\u00E4testens nach
 
 warningSelectSemester = Bitte zu bearbeitendes Semester ausw\u00E4hlen!
-numberOfRotationsInThisSequence=Anzahl Wechsel in dieser Sequenz
+numberOfRotationsInThisSequence=Anzahl Rotationen in dieser Sequenz
 pirAssignmentErrorMessage=Interner Fehler bei aufgetreten bei Rollenzuweisung
 notAvailable=Nicht verf\u00FCgbar
 notAssigned=Nicht zugewiesen
@@ -745,7 +745,7 @@ laterLunchError = Sp\u00E4tere Mittagspause nicht erlaubt!
 breakDuration=Pausendauer:
 newBreakDuration=Neue Pausendauer:
 newBreakDurationNotNull=Pausendauer darf nicht leer oder negativ sein!
-ignoreAcceptedOsceDay=Angenommenen OSCE-Termin ignorieren
+ignoreAcceptedOsceDay=Alle aktiven SPs anzeigen
 
 #payment
 payment = Kostenrechnung
@@ -761,7 +761,7 @@ roomAlreadyAssignWantToExcahnge = Dieser Raum ist bereits einem anderen Posten z
 roleUsage=Verwendung der Rolle
 
 #spec issue change
-exchange = Tauschen
+exchange = Austauschen
 exchangeSpError = Kein SP ausgew\u00E4hlt!
 exchangeStudError = Kein Student ausgew\u00E4hlt
 StudentDetailsPlace = Studenteninformationen
