--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -162,7 +162,7 @@ OSCE_CLOSED = Closed OSCE
 #Semesters
 HS = HS
 FS = FS
-FED = Fed
+FED = Federal
 
 # PostType
 NORMAL = Regular Station
@@ -185,19 +185,19 @@ item_analysis=item_analysis
 post_analysys=post_analysys
 
 #Color Names
-color_1=ORANGE1
-color_2=YELLOW
-color_3=PINK1
-color_4=GREEN1
-color_5=VIOLET1
-color_6=PINK2
-color_7=GREY1
-color_8=BLUE1
-color_9=PURPLE1
-color_10=ORANGE2
-color_11=GREEN2
-color_12=BLUE2
-color_13=VIOLET2
-color_14=PURPLE2
-color_15=BLUE3
-color_16=GREEN3
+color_1=Orange
+color_2=Yellow
+color_3=Pink
+color_4=Green
+color_5=Dim purple
+color_6=Red
+color_7=Brown
+color_8=Azure
+color_9=Blue
+color_10=Yellow / orange
+color_11=Light green
+color_12=Turquoise
+color_13=Grey
+color_14=Purple
+color_15=Dark green
+color_16=Gold
