--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -474,8 +474,8 @@ deleteTask=Do you really want to delete this task?
 saveOsceBlueprint=Osce Post blueprint saved successfully.
 osceDaySuccess=Osce Day Updated successfully
 osceSequence=OSCE Sequence:
-schedulePostpone = Postpone one sequence
-scheduleEarlier = Prepone one sequence
+scheduleEarlier = Prepone first rotation to previous day
+schedulePostpone = Postpone last rotation to next day
 warningRoomUnassigned = Please assign room to each station
 
 #Sequence Sub View
@@ -745,7 +745,7 @@ laterLunchError =Later lunch break not allowed!
 breakDuration=Break duration:
 newBreakDuration=New break duration:
 newBreakDurationNotNull=Break duration cannot be empty or negative!
-ignoreAcceptedOsceDay=Ignore Accepted OsceDay
+ignoreAcceptedOsceDay=Show all active SPs
 
 #payment
 payment = Cost accounting
@@ -761,7 +761,7 @@ roomAlreadyAssignWantToExcahnge = Room is already assigned to a different statio
 roleUsage=Past use of role
 
 #spec issue change
-exchange = Exchange
+exchange = Swap
 exchangeSpError = No SP has been selected!
 exchangeStudError = No student has been selected!
 StudentDetailsPlace = Student details
