--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -185,19 +185,19 @@ item_analysis=item_analysis
 post_analysys=post_analysys
 
 #Color Names
-color_1=Orange 1
-color_2=Gelb 1
-color_3=Pink 1
-color_4=Gr\u00FCn 1
-color_5=VIOLET1
-color_6=PINK2
-color_7=GREY1
-color_8=BLUE1
-color_9=PURPLE1
-color_10=ORANGE2
-color_11=GREEN2
-color_12=BLUE2
-color_13=VIOLET2
-color_14=PURPLE2
-color_15=BLUE3
-color_16=GREEN3
+color_1=Orange
+color_2=Gelb
+color_3=Pink
+color_4=Gr\u00FCn
+color_5=Mattviolett
+color_6=Rot
+color_7=Braun
+color_8=Himmelblau
+color_9=Blau
+color_10=Gelblich orange
+color_11=Hellgr\u00FCn
+color_12=T\u00FCrkis
+color_13=Grau
+color_14=Violett
+color_15=Gunkelgr\u00FCn
+color_16=Gold
