Changes in Role Assignment

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -816,6 +816,8 @@ shiftBreak = Shift Lunch Break :
 prevRotation = Previous Rotation
 nextRotation = Next Rotation
 
-sendToDmz = Send To DMZ
+sendToDmz = Senden auf DMZ
 
-acceptOsceDay=Accept OSCE Day
+acceptOsceDay = Akzeptieren OSCE Tag
+
+noEntries = Keine Einträge gefunden
