--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -818,7 +818,7 @@ shiftBreak = shiftBreak
 prevRotation = prevRotation
 nextRotation = nextRotation
 
-sendToDmz = Send To DMZ
+sendToDmz = sendToDmz
 
-acceptOsceDay=Accept OSCE Day
-
+acceptOsceDay=acceptOsceDay
+noEntries = noEntries
