Export Csv in Role Assignment & Implement R Script in Statistical Evaluation.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -821,3 +821,5 @@ sendToDmz = Senden auf DMZ
 acceptOsceDay = Akzeptieren OSCE Tag
 
 noEntries = Keine Einträge gefunden
+
+exportCsv = Exportieren CSV
