Changes in Post Analysis Of Statistical Evaluation

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -823,3 +823,8 @@ acceptOsceDay = Akzeptieren OSCE Tag
 noEntries = Keine Einträge gefunden
 
 exportCsv = Exportieren CSV
+
+graph = Graph
+imgError = Bild nicht gefunden
+graphError = Fehler in der Grafik-Generation
+graphPopupTitle = Statistic Pass Mark Graph
