--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -824,3 +824,8 @@ acceptOsceDay=acceptOsceDay
 noEntries = noEntries
 
 exportCsv = exportCsv
+
+graph = graph
+imgError = imgError
+graphError = graphError
+graphPopupTitle = graphPopupTitle
