--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -822,3 +822,8 @@ acceptOsceDay=Accept OSCE Day
 
 noEntries = No entries available
 exportCsv = Export CSV
+
+graph = Graph
+imgError = Image Not Found
+graphError = Error in graph generation
+graphPopupTitle = Statistic Pass Mark Graph
