Changes in Statistical Evaluation & Student Management

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -828,3 +828,5 @@ graph = Graph
 imgError = Bild nicht gefunden
 graphError = Fehler in der Grafik-Generation
 graphPopupTitle = Statistic Pass Mark Graph
+
+addPointErr = Please enter only numeric value
