--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -827,3 +827,5 @@ graph = Graph
 imgError = Image Not Found
 graphError = Error in graph generation
 graphPopupTitle = Statistic Pass Mark Graph
+
+addPointErr = Please enter only numeric value
