Module 8 Bug Fix + Module 16 Change implementation

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -52,6 +52,7 @@ email = Email
 enterAnswer = Bitte Antwort eingeben...
 enterQuestion = Bitte Frage eingeben...
 export = Exportieren
+newExport= New Export
 female = Weiblich
 field = Feld
 filterTitle = Titel-Filter
