--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -52,6 +52,7 @@ email = email
 enterAnswer = enterAnswer
 enterQuestion = enterQuestion
 export = export
+newExport= New Export
 female = female
 field = field
 filterTitle = filterTitle
