--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -52,6 +52,7 @@ email = Email
 enterAnswer = Please enter answer...
 enterQuestion = Please enter question...
 export = Export
+newExport= New Export
 female = Female
 field = Field
 filterTitle = Title filter
