Changes in shift long break

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -813,7 +813,7 @@ secretKey = Secret Key
 bucketInfoError = No bucket information found
 
 #change
-shiftBreak = Shift Lunch Break : 
+shiftBreak = Shift Long Break : 
 prevRotation = Previous Rotation
 nextRotation = Next Rotation
 
