Add Change time functionality in Circuit.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -831,3 +831,8 @@ graphError = Fehler in der Grafik-Generation
 graphPopupTitle = Statistic Pass Mark Graph
 
 addPointErr = Please enter only numeric value
+
+changeTime = Change Time
+
+osceDayStartTimeAdj = OSCE Day Startzeit
+afterLunchBreakTimeAdj = Nach dem Mittagessen Startzeit
