--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -830,3 +830,8 @@ graphError = Error in graph generation
 graphPopupTitle = Statistic Pass Mark Graph
 
 addPointErr = Please enter only numeric value
+
+changeTime = Change Time
+
+osceDayStartTimeAdj = Osce Day Start Time
+afterLunchBreakTimeAdj = After Lunch Start Time
