--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -832,3 +832,8 @@ graphError = graphError
 graphPopupTitle = graphPopupTitle
 
 addPointErr = addPointErr
+
+changeTime = changeTime
+
+osceDayStartTimeAdj = osceDayStartTimeAdj
+afterLunchBreakTimeAdj = afterLunchBreakTimeAdj
