Shift Rotation After Osce Close.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -836,3 +836,8 @@ changeTime = Change Time
 
 osceDayStartTimeAdj = OSCE Day Startzeit
 afterLunchBreakTimeAdj = Nach dem Mittagessen Startzeit
+
+osceDay = Osce Day
+upRotation = Up Rotation
+downRotation = Down Roation
+moveRotLunchBreak = Move Lunch Break Rotation
