--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -837,3 +837,8 @@ changeTime = changeTime
 
 osceDayStartTimeAdj = osceDayStartTimeAdj
 afterLunchBreakTimeAdj = afterLunchBreakTimeAdj
+
+osceDay = osceDay
+upRotation = upRotation
+downRotation = downRotation
+moveRotLunchBreak = moveRotLunchBreak
