--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -835,3 +835,8 @@ changeTime = Change Time
 
 osceDayStartTimeAdj = Osce Day Start Time
 afterLunchBreakTimeAdj = After Lunch Start Time
+
+osceDay = Osce Day
+upRotation = Up Rotation
+downRotation = Down Roation
+moveRotLunchBreak = Move Lunch Break Rotation
