Export eOSCE Changes.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -185,19 +185,19 @@ item_analysis=item_analysis
 post_analysys=post_analysys
 
 #Color Names
-color_1=Orange
-color_2=Gelb
-color_3=Pink
-color_4=Gr\u00FCn
-color_5=Mattviolett
-color_6=Rot
-color_7=Braun
-color_8=Himmelblau
-color_9=Blau
-color_10=Gelblich orange
-color_11=Hellgr\u00FCn
-color_12=T\u00FCrkis
-color_13=Grau
-color_14=Violett
-color_15=Gunkelgr\u00FCn
-color_16=Gold
+color_1=braun
+color_2=wgelb
+color_3=rosa
+color_4=aqua
+color_5=grau
+color_6=ot
+color_7=beige
+color_8=blau
+color_9=grün
+color_10=orange
+color_11=purpor
+color_12=kastanie
+color_13=olive
+color_14=violett
+color_15=indigo
+color_16=schwarz
