--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -185,19 +185,19 @@ item_analysis = item_analysis
 post_analysys = post_analysys
 
 #Color Names
-color_1=ORANGE1
-color_2=YELLOW
-color_3=PINK1
-color_4=GREEN1
-color_5=VIOLET1
-color_6=PINK2
-color_7=GREY1
-color_8=BLUE1
-color_9=PURPLE1
-color_10=ORANGE2
-color_11=GREEN2
-color_12=BLUE2
-color_13=VIOLET2
-color_14=PURPLE2
-color_15=BLUE3
-color_16=GREEN3
+color_1=Brown
+color_2=Yellow
+color_3=Pink
+color_4=Aqua
+color_5=Grey
+color_6=Red
+color_7=Beige
+color_8=Blue
+color_9=Green
+color_10=Orange
+color_11=Purpor
+color_12=Maroon
+color_13=Olive
+color_14=Violet
+color_15=Indigo
+color_16=Black
