--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -185,19 +185,19 @@ item_analysis=item_analysis
 post_analysys=post_analysys
 
 #Color Names
-color_1=Orange
+color_1=Brown
 color_2=Yellow
 color_3=Pink
-color_4=Green
-color_5=Dim purple
+color_4=Aqua
+color_5=Grey
 color_6=Red
-color_7=Brown
-color_8=Azure
-color_9=Blue
-color_10=Yellow / orange
-color_11=Light green
-color_12=Turquoise
-color_13=Grey
-color_14=Purple
-color_15=Dark green
-color_16=Gold
+color_7=Beige
+color_8=Blue
+color_9=Green
+color_10=Orange
+color_11=Purpor
+color_12=Maroon
+color_13=Olive
+color_14=Violet
+color_15=Indigo
+color_16=Black
