Implemented *REAL* Anonymisation. anonymize now replaces SP data; delete anonymizes SP data if SP has a role; appropriate confirmation dialogs should be displayed

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -14,6 +14,7 @@ addTrait = Merkmal hinzuf\u00FCgen
 addUser = Benutzer hinzuf\u00FCgen
 administrator = Benutzerverwaltung
 age = Alter
+anonymisationString = xxxx
 answer = Antwort
 answered = Beantwortet?
 answerGiven = Wurde beantwortet
@@ -224,6 +225,8 @@ spActive = Aktivieren
 spInactive = Deaktivieren
 
 warningFillRequiredFields = Bitte alle Pflichtfelder ausf\u00F6llen!
+warningAnonymizeSp = Dieser SP wurde bereits einer Rolle zugewiesen und kann deshalb nicht mehr aus der Datenbank gel\u00F6scht werden. Stattdessen wird er anonymisiert. Wollen Sie fortfahren?
+warningDeleteSp = Diese Aktion l\u00F6scht den SP unwiederruflich aus der Datenbank. Wollen Sie fortfahren?
 
 ######################### - ROLE - #########################
 
