--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -14,6 +14,7 @@ addTrait = addTrait
 addUser = addUser
 administrator = administrator
 age = age
+anonymisationString = anonymisationString
 answer = answer
 answered = answered
 answerGiven = answerGiven
@@ -224,6 +225,8 @@ spActive = spActive
 spInactive = spInactive
 
 warningFillRequiredFields = warningFillRequiredFields
+warningAnonymizeSp = warningAnonymizeSP
+warningDeleteSp = warningDeleteSP
 
 ######################### - ROLE - #########################
 
