--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -14,6 +14,7 @@ addTrait = Add attribute
 addUser = Add user
 administrator = User management
 age = Age
+anonymisationString = xxxx
 answer = Answer
 answered = Answered?
 answerGiven = Answer given
@@ -224,6 +225,8 @@ spActive = Activate
 spInactive = Deactivate
 
 warningFillRequiredFields = Please fill all the required fields!
+warningAnonymizeSp = This SP has previously been assigned to a role and therefore can not be deleted. The SP data will be anonymized instead. This can not be undone. Do you want to continue?
+warningDeleteSp = This will delete the SP from the database. Are you sure you want to continue?
 
 ######################### - ROLE - #########################
 
