Export Schedule for Supervisor & export eOSCE Changes.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -842,3 +842,35 @@ osceDay = osceDay
 upRotation = upRotation
 downRotation = downRotation
 moveRotLunchBreak = moveRotLunchBreak
+
+color_1=braun
+color_2=wgelb
+color_3=rosa
+color_4=aqua
+color_5=grau
+color_6=ot
+color_7=beige
+color_8=blau
+color_9=grün
+color_10=orange
+color_11=purpor
+color_12=kastanie
+color_13=olive
+color_14=violett
+color_15=indigo
+color_16=schwarz
+
+exportCsvSuper=exportCsvSuper
+
+startTone = startTone
+endTone = endTone
+prePostEnd = prePostEnd
+preBreakEnd = preBreakEnd
+startEndToneErr = startEndToneErr
+
+startToneErr = startToneErr
+endToneErr = endToneErr
+prePostToneErr = prePostToneErr
+prePostTimeErr = prePostTimeErr
+preBreakTimeErr = preBreakTimeErr
+preBreakToneErr = preBreakToneErr
