Examiner Assignment Split Functionality

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -186,16 +186,16 @@ post_analysys=post_analysys
 
 #Color Names
 color_1=braun
-color_2=wgelb
-color_3=rosa
+color_2=gelb
+color_3=pink
 color_4=aqua
 color_5=grau
-color_6=ot
+color_6=rot
 color_7=beige
 color_8=blau
 color_9=grün
 color_10=orange
-color_11=purpor
+color_11=purpur
 color_12=kastanie
 color_13=olive
 color_14=violett
