--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -195,7 +195,7 @@ color_7=Beige
 color_8=Blue
 color_9=Green
 color_10=Orange
-color_11=Purpor
+color_11=Purpur
 color_12=Maroon
 color_13=Olive
 color_14=Violet
